# RustBoy

./: .gitignore  Cargo.toml  LICENSE  README.md  check_logs.py  index.html  package-lock.json  package.json  rustfmt.toml  vite.config.js
.github/workflows/: blarggs_test_roms.yml  deploy_page.yml
src/: cpu.rs  debugging.rs  frontend.rs  gpu.rs  input.rs  interrupts.rs  lib.rs  main.rs  memory_bus.rs  ppu.rs  timer.rs
src/cpu/: instructions.rs  memory_bus.rs  registers.rs
src/cpu/instructions/: add.rs  add_and_adc.rs  bit.rs  call_and_ret.rs  call_ret_and_rst.rs  call_ret_rst_and_reti.rs  daa_scf_cpl_and_ccf.rs  di_and_ei.rs  halt.rs  inc_and_dec.rs  jr.rs  jump.rs  ldh.rs  load.rs  logical_operators.rs  parsing.rs  push_and_pop.rs  res_and_set.rs  rlc_rrc_rl_and_rr.rs  rlca_rrca_rla_and_rra.rs  sla_and_sra.rs  sla_sra_and_srl.rs  sub_and_sbc.rs  swap.rs
src/frontend/: shader.rs
src/frontend/shaders/: compute_shader.wgsl  scanline_shader.wgsl  shader.wgsl
src/gpu/: information_for_shader.rs  object_handling.rs  registers.rs  tile_handling.rs
src/memory_bus/: mbc.rs
src/memory_bus/mbc/: mbc1.rs
src/ppu/: information_for_shader.rs  object_handling.rs  registers.rs  tile_handling.rs
