[package]
name = "rustboy"
version = "0.1.0"
edition = "2024"
authors = ["Raoul Luqué <raoulsluque@gmail.com>"]
resolver = "2"
description = "A Game Boy emulator"
license = "MIT"
repository = "https://github.com/RaoulLuque/RustBoy"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustboy"
path = "src/main.rs"

[profile.dev]
opt-level = 3
strip = false
debug = true

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = false
debug = true

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
wasm-timer = "0.2.0"
bytemuck = { version = "1.21.0", features = ["derive"] }

# Binary only dependencies
clap = { version = "4.5.31", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
